added product controller

--- a/src/main/resources/templates/view_resource_2_page.html
+++ b/src/main/resources/templates/view_resource_2_page.html
@@ -7,7 +7,7 @@
 <body>
 
 <form action="/view_controller/resource_2" method="get">
-    <input type="text" name="city" placeholder="City"/>
+    <input type="text" name="city" th:placeholder="${city}"/>
     <button type="submit">Search</button>
 </form>
 
