--- a/src/main/resources/templates/product_product_resource_page.html
+++ b/src/main/resources/templates/product_product_resource_page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a href="/products/create">
+<a href="/products/create/category">
     <button type="submit">Create product</button>
 </a>
 <div th:each="product : ${products}" style="border-bottom: 1px solid black;">
