corrected product controller

--- a/src/main/resources/templates/product_create_resource_page.html
+++ b/src/main/resources/templates/product_create_resource_page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form method="post" action="/products">
+<form method="post" action="/products/create">
     <input type="hidden" name="categoryId" th:value="${category.id}">
     <p>
         <label>Категория: </label></br>
