--- a/src/main/resources/templates/product_product_resource_page.html
+++ b/src/main/resources/templates/product_product_resource_page.html
@@ -9,15 +9,22 @@
 <a href="/products/create/category">
     <button type="submit" style="width: 150px; height: 50px;">Create product</button>
 </a>
+
 <div th:each="product : ${products}" style="border-bottom: 1px solid black;">
     <p>Name: <b th:text="${product.getName()}"></b></p>
     <p>Price: <b th:text="${product.getPrice()}"></b></p>
     <p>Category: <b th:text="${product.getCategory().getName()}"></b></p>
-    <p>
-    <form method="get" action="/products/change">
-        <button type="submit" name="productId" th:value="${product.getId()}">Edit</button>
-    </form>
-    </p>
+
+    <div style="display: flex; margin-bottom: 5px;">
+        <form method="get" action="/products/change">
+            <button type="submit" name="productId" th:value="${product.getId()}">Edit</button>
+        </form>
+
+        <form method="get" action="/products/view">
+            <button type="submit" name="productId" th:value="${product.getId()}">View</button>
+        </form>
+    </div>
+
 </div>
 
 </body>
