--- a/src/main/resources/templates/product_view_page.html
+++ b/src/main/resources/templates/product_view_page.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<!--Описание товара-->
 <p>Название товара: <b th:text="${product.getName()}"></b></p>
 <p>Категория товара: <b th:text="${product.getCategory().getName()}"></b></p>
 <p>Цена товара: <b th:text="${product.getPrice()}"></b></p>
@@ -19,6 +20,27 @@
     </p>
 </th:block>
 
+<p>Средний рейтинг товара: <b th:text="${averageRating}"></b></p>
+
+
+<!--Оставить отзыв и рейтинг-->
+<form method="post" action="/products/saveReview" style="margin-top: 70px;">
+    <input type="hidden" name="productId" th:value="${product.getId()}">
+    <select name="rating" style="margin-bottom: 5px;">
+        <option disabled selected>Choose rating</option>
+        <option th:each="i : ${#numbers.sequence(1,5)}"
+                th:value="${i}"
+                th:text="${i}">
+    </select>
+    <br/>
+    <input type="text" name="commentary" placeholder="Leave a commentary" style="width: 500px;"/>
+    <br/>
+    <br/>
+    <button type="submit">Save</button>
+</form>
+
+
+<!--Отзывы-->
 <div style="margin-top: 100px;">
     <th:block th:each="review : ${reviews}">
         <p>
@@ -27,7 +49,7 @@
             <div style="margin-left: 15px;"
                  th:text="${review.getUser().getFirstName()} + ' ' + ${review.getUser().getLastName()}"></div>
         </div>
-        <div style="display: flex;">
+        <div style="display: flex; border-right: 1px solid black; width: 500px;">
             <div th:text="${review.getRating()}"></div>
             <div style="margin-left: 15px;" th:text="${review.getCommentary()}"></div>
         </div>
