--- a/src/main/resources/templates/cart_page.html
+++ b/src/main/resources/templates/cart_page.html
@@ -9,16 +9,23 @@
     <p th:text="${'Название товара: ' + cart.getProduct().name}"></p>
     <p th:text="${'Количество товара: ' + cart.getAmount()}"></p>
     <div style="display: flex; flex-direction: row;">
-        <form method="post" action="/products/cart">
-            <input type="hidden" name="cartId" th:value="${cart.id}">
-            <button name="decrement" value="1">-</button>
-            <span th:text="${cart.getAmount()}"></span>
-            <button name="increment" value="1">+</button>
-            <button style="margin-left: 10px;" name="delete" value="1">Delete</button>
+        <form method="get" action="/products/cart/decrease">
+            <button type="submit" name="cartId" th:value="${cart.id}">-</button>
+        </form>
+        <span th:text="${cart.getAmount()}"></span>
+        <form method="get" action="/products/cart/increase">
+            <button type="submit" name="cartId" th:value="${cart.id}">+</button>
+        </form>
+        <form method="get" action="/products/cart/delete">
+            <button type="submit" name="cartId" th:value="${cart.id}" style="margin-left: 10px;">Delete</button>
         </form>
     </div>
     <div style="border-bottom: solid 1px black; margin-bottom: 2px; margin-top: 5px"></div>
 </th:block>
+<p th:text="${'Сумма всех товаров: ' + sum + ' тг.'}"></p>
+<!--<form method="get" action="/products/placeOrder">-->
+<!--    <button type="submit" name="userId" th:value="${carts.get(0).getUser()}"></button>-->
+<!--</form>-->
 <form method="get" action="/products/update_cart">
     <button>Main page</button>
 </form>
