--- a/src/main/resources/templates/product_product_resource_page.html
+++ b/src/main/resources/templates/product_product_resource_page.html
@@ -13,6 +13,9 @@
     <a href="/products/cart">
         <button type="submit" style="width: 150px; height: 50px; margin-left: 20px;">Cart</button>
     </a>
+    <a href="/products/moderate_reviews">
+        <button type="submit" style="width: 150px; height: 50px; margin-left: 20px;">Moderate reviews</button>
+    </a>
 </div>
 
 <div th:each="product : ${products}" style="border-bottom: 1px solid black; ">
