--- a/src/main/resources/templates/product_view_page.html
+++ b/src/main/resources/templates/product_view_page.html
@@ -62,6 +62,10 @@
     </th:block>
 </div>
 
+<br/>
+<form method="get" action="/products">
+    <button>Main page</button>
+</form>
 
 </body>
 </html>
