Moderate order status & Filter by status

--- a/src/main/resources/templates/product_product_resource_page.html
+++ b/src/main/resources/templates/product_product_resource_page.html
@@ -13,8 +13,14 @@
     <a href="/products/cart">
         <button type="submit" style="width: 150px; height: 50px; margin-left: 20px;">Cart</button>
     </a>
+    <a href="/products/orders">
+        <button type="submit" style="width: 150px; height: 50px; margin-left: 20px;">Orders</button>
+    </a>
     <a href="/products/moderate_reviews">
         <button type="submit" style="width: 150px; height: 50px; margin-left: 20px;">Moderate reviews</button>
+    </a>
+    <a href="/products/moderate_orders">
+        <button type="submit" style="width: 150px; height: 50px; margin-left: 20px;">Moderate orders</button>
     </a>
 </div>
 
