--- a/src/main/resources/templates/product_product_resource_page.html
+++ b/src/main/resources/templates/product_product_resource_page.html
@@ -24,6 +24,17 @@
             <button class="head_button">Модерация заказов</button>
         </a>
     </div>
+    <div>
+        <a href="/login">
+            <button class="head_button">Вход</button>
+        </a>
+        <a href="/user/sign_up">
+            <button class="head_button">Регистрация</button>
+        </a>
+        <a href="/logout">
+            <button class="head_button">Выход</button>
+        </a>
+    </div>
 </div>
 
 <div class="products_container">
