--- a/src/main/resources/static/css/product_view.css
+++ b/src/main/resources/static/css/product_view.css
@@ -182,6 +182,26 @@ body {
     margin-bottom: 10px;
 }
 
+.admin_buttons {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.admin_buttons button {
+    background-color: #afd5ab;
+    color: #2f5d28;
+    padding: 5px 10px 5px 10px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.admin_buttons button:hover {
+    background-color: #2f5d28;
+    color: white;
+}
+
 .main_page_button {
     position: fixed;
     bottom: 20px;
