Html fragments, BCrypt password

--- a/src/main/resources/templates/cart_page.html
+++ b/src/main/resources/templates/cart_page.html
@@ -38,9 +38,10 @@
     </form>
 </div>
 
-<form method="get" action="/products/update_cart">
+<th:block th:replace="fragments/main_button_fragment :: main_button('/products/update_cart')"></th:block>
+<!--<form method="get" action="/products/update_cart">
     <button class="main_page_button">Main page</button>
-</form>
+</form>-->
 
 </body>
 </html>
